# esp-webrtc-solution

./: .gitlab-ci.yml  README.md  conftest.py
.github/workflows/: upload_component.yml
.gitlab/ci/: build_webrtc_solutions.yml  common.yml  pre_check.yml  rules.yml
components/av_render/: CMakeLists.txt  idf_component.yml
components/av_render/include/: av_render.h  av_render_types.h  video_decoder.h
components/codec_board/: board_cfg.txt  codec_board.c  codec_init.c  idf_component.yml
components/esp_capture/: idf_component.yml
components/esp_peer/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/esp_peer/examples/peer_demo/: sdkconfig.defaults
components/esp_peer/include/: esp_peer.h
components/esp_peer/src/: dtls_srtp.c  esp_peer.c  media_lib_weak.c
components/esp_webrtc/: CMakeLists.txt  idf_component.yml
solutions/common/: CMakeLists.txt  idf_component.yml  network.c  network.h  sys_state.c
solutions/doorbell_demo/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
solutions/doorbell_local/: README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
solutions/openai_demo/: CMakeLists.txt  sdkconfig.defaults
solutions/peer_demo/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
solutions/videocall_demo/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4
solutions/whip_demo/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
tools/: build_all.pl  build_apps.pl  gen_ci.py
tools/ci/: utils.sh
(+75 files in other folders)
